align data to UI needs
